--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Admin.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Admin.cshtml
@@ -137,10 +137,20 @@
                 type: "POST",
                 success: function (data) {
                     if (data.success) {
-                        $.notify(data.message, "success")
+                        noty({
+                            text: data.message,
+                            layout: "topCenter",
+                            type: "success",
+                            timeout: 2000
+                        });
                         $("#admin-table").dataTable().api().ajax.reload(null, false);
                     } else {
-                        $.notify(data.message, "error")
+                        noty({
+                            text: data.message,
+                            type: "error",
+                            layout: "topRight",
+                            timeout: 2000
+                        });
                     }
                 }
             });
