--- a/TMS/TMS/Areas/Manager/Views/ManageSC/PriorityMatrix.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/PriorityMatrix.cshtml
@@ -40,7 +40,12 @@
                     checkPriority();
                 },
                 error: function () {
-                    $.notify("Cannot connect to server!", "error");
+                    noty({
+                        text: "Cannot connect to server!",
+                        layout: "topRight",
+                        type: "error",
+                        timeout: 2000
+                    });
                 }
             });
         };
@@ -65,8 +70,13 @@
                     });
                 },
                 error: function () {
-                    $.notify("Cannot connect to server!", "error");
-                }
+                    noty({
+                        text: "Cannot connect to server!",
+                        layout: "topRight",
+                        type: "error",
+                        timeout: 2000
+                    });
+                                  }
             });
         };
 
@@ -86,14 +96,29 @@
                 },
                 success: function (data) {
                     if (data.success) {
-                        $.notify(data.message, "success");
+                        noty({
+                            text: data.message,
+                            layout: "topCenter",
+                            type: "success",
+                            timeout: 2000
+                        });
                     } else {
-                        $.notify(data.message, "error");
+                        noty({
+                            text: data.message,
+                            type: "error",
+                            layout: "topRight",
+                            timeout: 2000
+                        });
                         initPriorityMatrixTable();
                     }
                 },
                 error: function () {
-                    $.notify("Cannot connect to server!", "error");
+                    noty({
+                        text: "Cannot connect to server!",
+                        layout: "topRight",
+                        type: "error",
+                        timeout: 2000
+                    });
                 }
             });
         });
