--- a/TMS/TMS/Views/Ticket/Detail.cshtml
+++ b/TMS/TMS/Views/Ticket/Detail.cshtml
@@ -258,7 +258,7 @@
                         else {
                             noty({
                                 text: data.msg,
-                                layout: "topRight",
+                                layout: "topCenter",
                                 type: "success",
                                 timeout: 2000
                             });
