--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -437,7 +437,7 @@
                             if (!data.success) {
                                 noty({
                                     text: data.msg,
-                                    layout: "topCenter",
+                                    layout: "topRight",
                                     type: "error",
                                     timeout: 2000
                                 });
