--- a/TMS/TMS/Views/Account/Login.cshtml
+++ b/TMS/TMS/Views/Account/Login.cshtml
@@ -84,14 +84,29 @@
             },
             success: function (data) {
                 if (data.success) {
-                    $.notify(data.message, "success");
+                    noty({
+                        text: data.message,
+                        layout: "topCenter",
+                        type: "success",
+                        timeout: 2000
+                    });
                     $('form').animate({ height: "toggle", opacity: "toggle" }, "slow");
                 } else {
-                    $.notify(data.message, "error");
-                }
+                    noty({
+                        text: data.message,
+                        type: "error",
+                        layout: "topRight",
+                        timeout: 2000
+                    });
+                                   }
             },
             error: function () {
-                $.notify("Cannot connect to server", "error");
+                noty({
+                    text: "Cannot connect to server!",
+                    layout: "topRight",
+                    type: "error",
+                    timeout: 2000
+                });
             }
         });
     });
