--- a/TMS/TMS/Views/Profile/Index.cshtml
+++ b/TMS/TMS/Views/Profile/Index.cshtml
@@ -178,6 +178,7 @@
                     <div class="form-group">
                         <div class="col-xs-offset-4 col-xs-8">
                             @Html.ActionLink("Update Profile", "UpdateProfile", null, new { @class = "btn btn-success" })
+                            @Html.ActionLink("Change Password", "ChangePassword", new { area = "" }, new { @class = "btn btn-success" })
                         </div>
                     </div>
                 </div>
